# zombienet-sdk

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Cargo.toml  README.md  crates.js  doc_preparation.sh  help.html  index.html  rustfmt.toml  search-index.js  settings.html  sketch.rs  src-files.js
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  reproduce.rs
crates/cli/testing/: config.toml
crates/configuration/: Cargo.toml
crates/configuration/src/: custom_process.rs  errors.rs  global_settings.rs  hrmp_channel.rs  lib.rs  main.rs  network.rs  observability.rs  parachain.rs  relaychain.rs  shared.rs  utils.rs
crates/configuration/src/network/: configuration.rs  mod.rs
crates/configuration/src/parachain/: mod.rs
crates/configuration/src/relaychain/: configuration.rs  mod.rs
crates/configuration/src/shared/: constants.rs  errors.rs  helpers.rs  macros.rs  node.rs  resources.rs  types.rs
crates/configuration/src/shared/node/: configuration.rs  (+1 more)
crates/configuration/testing/snapshots/: 0000-small-network.toml  0001-big-network.toml  0002-overridden-defaults.toml  0003-small-network_w_parachain.toml  0004-small-network-without-settings.toml  0005-small-networl-with-wasm-override.toml  0006-without-rc-chain-name.toml  0007-small-network_w_parachain_w_duplicate_node_names.toml  0008-small-network-with-raw-spec-override.toml
crates/examples/: Cargo.toml  README.md
crates/examples/examples/: 0001-simple.toml  0002-resource_limits.toml  0002-simple-group-nodes.toml  0003-arg-removal.toml  0004-polkadot-ah-chain-spec-runtime.toml  add_para.rs  arg_removal.rs  big_network_with_group_nodes.rs  chain_spec_command.rs  chain_spec_generation.rs  chain_spec_key_types.rs  chain_spec_runtime_kusama.rs  custom_process_positional_args.rs  db_snapshot.rs  decorator_usage.rs  docker_db_snapshot.rs  evm_parachain_session_key.rs  from_live.rs  genesis_override.rs  genesis_state_generator_example.rs  keystore_key_types.rs  local-v.rs  network_example_with_group_nodes.rs  observability.rs  para_upgrade.rs  pg.rs  pjs.rs  pjs_transfer.js  polkadot_people_wasm_runtime.rs  raw_spec_override.rs  register_para.rs  resource_limits.rs  simple_network_example.rs  small_network.rs  small_network_config.rs  small_network_with_base_dir.rs  small_network_with_default.rs  small_network_with_para.rs  test_run_script.rs  two_paras_same_id.rs  (+1 more)
crates/examples/examples/common/: lib.rs
crates/examples/examples/configs/: chain_spec_command.toml  custom_process_positional_args.toml  simple-group-nodes.toml  simple.toml  wasm-override.toml
crates/examples/scripts/: customize-chain-spec.sh  monitor-blocks.sh
crates/file-server/: Cargo.toml  Dockerfile
crates/file-server/src/: main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: cli.rs  input.rs  install.rs  lib.rs  log_patterns.rs  main.rs  recent_runs.rs  report.rs  server.rs  tools.rs
crates/mcp/src/diagnostics/: evidence.rs  live.rs  metrics.rs  mod.rs  nodes.rs  startup.rs  test_helpers.rs
crates/mcp/tests/: diagnose_cli.rs  live_diagnostics.rs  mcp_stdio.rs  validate_cli.rs
crates/mcp/tests/fixtures/: invalid.toml
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: chain_spec.rs  errors.rs  generators.rs  lib.rs  metadata.scale  network.rs  network_helper.rs  network_spec.rs  observability.rs  pjs_helper.rs  shared.rs  spawner.rs  tx_helper.rs  utils.rs
crates/orchestrator/src/decorators/: chain_spec_trait.rs  mod.rs  registry.rs
crates/orchestrator/src/generators/: arg_filter.rs  bootnode_addr.rs  chain_spec.rs  chain_spec_key_types.rs  command.rs  core_assignment.rs  db_snapshot.rs  errors.rs  identity.rs  key.rs  keystore.rs  keystore_key_types.rs  para_artifact.rs  port.rs  session_0_overrides.rs
crates/orchestrator/src/network/: chain_upgrade.rs  node.rs  parachain.rs  relaychain.rs
crates/orchestrator/src/network_helper/: metrics.rs  node_watcher.rs  verifier.rs
crates/orchestrator/src/network_spec/: node.rs  parachain.rs  relaychain.rs
crates/orchestrator/src/shared/: constants.rs  macros.rs  types.rs
crates/orchestrator/src/tx_helper/: client.rs  parachain.rs  register_para.rs  runtime_upgrade.rs  validator_actions.rs
crates/orchestrator/testing/: asset-hub-kusama_runtime-v2000002.compact.compressed.wasm  kusama_runtime-v2000002.compact.compressed.wasm  rococo-local-plain.json  rococo-penpal-local-plain.json
crates/prom-metrics-parser/: Cargo.toml
crates/prom-metrics-parser/src/: grammar.pest  lib.rs
crates/prom-metrics-parser/testing/: metrics.txt
crates/provider/: Cargo.toml
crates/provider/src/: docker.rs  errors.rs  helpers.rs  kubernetes.rs  lib.rs  native.rs  shared.rs
crates/provider/src/docker/: client.rs  namespace.rs  node.rs  provider.rs
crates/provider/src/kubernetes/: client.rs  namespace.rs  node.rs  pod_spec_builder.rs  provider.rs  zombie-wrapper.sh
crates/provider/src/native/: helpers.rs  namespace.rs  node.rs  provider.rs
crates/provider/src/shared/: args.rs  client.rs  constants.rs  helpers.rs  provider.rs  types.rs
crates/provider/testing/: dummy_node  dummy_script
crates/sdk/: Cargo.toml
crates/sdk/src/: environment.rs  lib.rs  snapshot.rs
crates/sdk/tests/: basic_warp_sync.rs  block_building.rs  block_building_warp_sync.rs  chain_spec_runtime.rs  chain_spec_runtime_omni_node.rs  chain_spec_runtime_polkadot.rs  client-runtime.rs  matrix-native.rs  native.rs  smoke-core-assign.rs  smoke-native.rs  smoke.rs  snapshot_roundtrip.rs  two-paras-same-id.rs  validators_warp_sync.rs
crates/sdk/tests/configs/: block-building.toml  test-block-building-warp-sync.toml  test-validators-warp-sync.toml  test-warp-sync.toml
crates/support/: Cargo.toml
crates/support/src/: constants.rs  errors.rs  fs.rs  lib.rs  net.rs  process.rs  replacer.rs  substorage.rs
crates/support/src/fs/: errors.rs  in_memory.rs  local.rs  local_file.rs  mock.rs
crates/support/src/process/: fake.rs  os.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  helpers.rs  lib.rs  logs.rs  main.rs  network.rs  watcher.rs
crates/tui/src/ui/: help.rs  layout.rs  mod.rs  widgets.rs
(+3301 files in other folders)
