[workspace]
resolver = "2"
members = [
  "crates/examples",
  "crates/support",
  "crates/configuration",
  "crates/orchestrator",
  "crates/provider",
  "crates/test-runner",
  "crates/prom-metrics-parser",
]

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
tokio = "1.28"
reqwest = "0.11"
regex = "1.8"
lazy_static = "1.4"
multiaddr = "0.18"
url = "2.3"
uuid = "1.4"
nix = "0.27"
procfs = "0.15"
pest = "2.7"
pest_derive = "2.7"
rand = "0.8"
sha2 = { version = "0.10.2", default-features = false }
hex = "0.4"
sp-core = "22.0.0"
libp2p = { version = "0.52" }
subxt = "0.32.0"
subxt-signer = { version = "0.32.0", features = ["subxt"]}
