[workspace]
resolver = "2"
members = [
  "crates/configuration",
  "crates/examples",
  "crates/file-server",
  "crates/orchestrator",
  "crates/prom-metrics-parser",
  "crates/provider",
  "crates/sdk",
  "crates/support",
  "crates/test-runner",
]

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "0.1.0-alpha.1"
rust-version = "1.70.0"
license = "Apache-2.0 OR GPL-3.0"
repository = "https://github.com/paritytech/zombienet-sdk"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
axum-extra = "0.9"
futures = "0.3"
hex = "0.4"
k8s-openapi = "0.21"
kube = "0.88"
lazy_static = "1.4"
libp2p = "0.53"
multiaddr = "0.18"
nix = "0.28"
pest = "2.7"
pest_derive = "2.7"
pjs-rs = "0.1.2"
rand = "0.8"
regex = "1.8"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = { version = "0.10.2", default-features = false }
sp-core = "30.0"
subxt = "0.34"
subxt-signer = "0.34"
sysinfo = "0.30"
tar = "0.4"
thiserror = "1.0"
tokio = "1.28"
tokio-util = "0.7"
toml = "0.8"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
uuid = "1.4"

# Zombienet workspace crates:
configuration = { package = "zombienet-configuration", version = "0.1.0-alpha.1", path = "crates/configuration" }
orchestrator = { package = "zombienet-orchestrator", version = "0.1.0-alpha.1", path = "crates/orchestrator" }
prom-metrics-parser = { package = "zombienet-prom-metrics-parser", version = "0.1.0-alpha.1", path = "crates/prom-metrics-parser" }
provider = { package = "zombienet-provider", version = "0.1.0-alpha.1", path = "crates/provider" }
support = { package = "zombienet-support", version = "0.1.0-alpha.1", path = "crates/support" }
zombienet-sdk = { version = "0.1.0-alpha.1", path = "crates/sdk" }
