[workspace]
resolver = "2"
members = [
  "crates/sdk",
  "crates/examples",
  "crates/support",
  "crates/configuration",
  "crates/orchestrator",
  "crates/provider",
  #"crates/test-runner",
  "crates/prom-metrics-parser",
  "crates/file-server",
]

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "0.2.15"
rust-version = "1.70.0"
license = "Apache-2.0 OR GPL-3.0"
repository = "https://github.com/paritytech/zombienet-sdk"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7"
tokio = "1.28"
tokio-util = "0.7"
reqwest = "0.11"
regex = "1.8"
lazy_static = "1.4"
multiaddr = "0.18"
url = "2.3"
uuid = "1.4"
nix = "0.27"
pest = "2.7"
pest_derive = "2.7"
rand = "0.8"
sha2 = { version = "0.10.2", default-features = false }
hex = "0.4"
sp-core = "31.0.0"
libp2p = { version = "0.52" }
subxt = { version = "0.38", features = ["substrate-compat"] }
subxt-signer = { version = "0.38", features = ["subxt"] }
tracing = "0.1.35"
kube = "0.87.1"
k8s-openapi = "0.20.0"
tar = "0.4"
axum = { version = "0.7" }
axum-extra = { version = "0.9" }
tower = { version = "0.4" }
tower-http = { version = "0.5" }
tracing-subscriber = { version = "0.3" }
glob-match = "0.2.1"
libsecp256k1 = { version = "0.7.1", default-features = false }

# Zombienet workspace crates:
support = { package = "zombienet-support", version = "0.2.15", path = "crates/support" }
configuration = { package = "zombienet-configuration", version = "0.2.15", path = "crates/configuration" }
orchestrator = { package = "zombienet-orchestrator", version = "0.2.15", path = "crates/orchestrator" }
provider = { package = "zombienet-provider", version = "0.2.15", path = "crates/provider" }
prom-metrics-parser = { package = "zombienet-prom-metrics-parser", version = "0.2.15", path = "crates/prom-metrics-parser" }
zombienet-sdk = { version = "0.2.15", path = "crates/sdk" }
