[package]
name = "zombie-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Zombienet cli, entrypoint for using zombienet"
keywords = ["zombienet", "sdk", "cli"]

[[bin]]
name = "zombie-cli"
path = "src/main.rs"
doc = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.18"
tokio = { workspace = true }
zombienet-sdk = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
anyhow = { workspace = true }
