[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configuration = { path = "../configuration" }
support = { path = "../support" }
provider = { path = "../provider" }
tokio = { workspace = true, features = ["time"] }
thiserror = { workspace = true }
#log = { workspace = true }
multiaddr = { workspace = true }
rand = "0.8"
sha2 = { version = "0.10.2", default-features = false }
hex = "0.4"
sp-core = "22.0.0"
