[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configuration = { path = "../configuration" }
support = { path = "../support" }
provider = { path = "../provider" }
tokio = { workspace = true, features = ["time"] }
thiserror = { workspace = true }
# TODO: add logger in a new pr.
#log = { workspace = true }
multiaddr = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true, default-features = false }
hex = { workspace = true }
sp-core = { workspace = true }
libp2p = { workspace = true }