[package]
name = "zombienet-orchestrator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Zombienet Orchestrator, drive network spwan through providers"
keywords = ["zombienet", "orchestrator", "sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["time"] }
thiserror = { workspace = true }
multiaddr = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
futures = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true, default-features = false }
hex = { workspace = true }
sp-core = { workspace = true }
libp2p = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
pjs-rs = { workspace = true, optional = true }
uuid = { workspace = true }
regex = { workspace = true }
glob-match = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
libsecp256k1 = { workspace = true  }

# Zombienet deps
configuration = { workspace = true }
support = { workspace = true }
provider = { workspace = true }
prom-metrics-parser = { workspace = true }

[dev-dependencies]
toml = { workspace = true }

[features]
pjs = ["dep:pjs-rs"]
