[package]
name = "provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
support = { path = "../support" }
configuration = { path = "../configuration" }
async-trait = { workspace = true }
futures = { workspace = true }
#napi = { version="2.12.7", features=["async"]}
#napi-derive = "2.12.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = [
    "process",
    "macros",
    "fs",
    "time",
    "rt",
] }
tokio-util = { workspace = true, features = ["compat"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
nix = { workspace = true, features = ["signal"] }
kube = { workspace = true, features = ["ws"] }
k8s-openapi = { workspace = true, features = ["v1_27"] }
tar = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
