[package]
name = "zombienet-provider"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Zombienet provider, implement the logic to run the nodes in the native provider"
keywords = ["zombienet", "provider", "native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "process",
    "macros",
    "fs",
    "time",
    "rt",
] }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
nix = { workspace = true, features = ["signal"] }
tracing = { workspace = true }

# Zomebienet deps
support = { workspace = true }
configuration = { workspace = true }
