[package]
name = "zombienet-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Zombienet SDK, entrypoint for using zombienet"
keywords = ["zombienet", "sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
subxt = { workspace = true }

# Zombienet deps
configuration = { workspace = true }
orchestrator = { workspace = true }
provider = { workspace = true }
support = { workspace = true }

[features]
ci-k8s = []

[dev-dependencies]
tracing-subscriber = "0.3"
kube = { workspace = true, features = ["ws", "runtime"] }
k8s-openapi = { workspace = true, features = ["v1_27"] }
serde_json = {workspace = true }
