[package]
name = "support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
