[package]
name = "zombienet-tui"
description = "Terminal UI for monitoring and managing zombienet networks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "zombienet-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { workspace = true, features = ["full", "sync"] }
futures = { workspace = true }
zombienet-sdk = { workspace = true }
provider = { workspace = true }
orchestrator = { workspace = true }
support = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
notify = "7.0"
sysinfo = "0.32"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
